<resources>
    <string name="app_name">BCDemo</string>

    <!-- Labels/Headers/Hints -->
    <string name="select_auth_type">Select Authentication Type:</string>
    <string name="user_hint">UserID</string>
    <string name="password_hint">Password</string>
    <string name="universal_hint">Username</string>
    <string name="email_hint">Email Address</string>
    <string name="identity_header">Identity</string>
    <string name="entity_header">Entities</string>
    <string name="xp_header">Experience</string>
    <string name="currency_header">Currency</string>
    <string name="stats_header">Statistics</string>
    <string name="scripts_header">Cloud Code</string>
    <string name="identity_status">Update Your Identity</string>
    <string name="entity_status">Create/Delete Entities</string>
    <string name="xp_status">Increment XP</string>
    <string name="currency_status">Award/Consume Currency</string>
    <string name="stats_status">View Statistics</string>
    <string name="script_status">Run Cloud Code Scripts</string>
    <string name="bcl_func_help">brainCloud function help message</string>
    <string name="player_level">Player Level:</string>
    <string name="player_xp_accrued">Player XP Accrued:</string>
    <string name="increment_amount">increment amount</string>
    <string name="balance">Balance:</string>
    <string name="awarded">Awarded:</string>
    <string name="consumed">Consumed:</string>
    <string name="award_consume_gems">award/consume gems</string>
    <string name="identity_help">
        Attach or merge an email or universal ID to an existing user. \nIdentity information can be
        viewed in the brainCloud portal under:\nUsers > User Summary > Credentials.
    </string>
    <string name="entity_help">
        Create a new entity or delete/modify an existing one. \nEntities can be viewed in the
        brainCloud portal under:\nUsers > Data > User Entities.
    </string>
    <string name="xp_help">
        Define XP Levels on the brainCloud portal under:\nDesign > Gamification > XP Levels.\nIf no
        XP Levels are defined, only XP Points will be modified. \nXP information can be viewed under:
        \nUsers > User Summary > Account Details.
    </string>
    <string name="currency_help">
        "Gems" are the defined Virtual Currency used in this demo. \nCreate Virtual Currencies in the
        brainCloud portal under:\nDesign > Marketplace > Virtual Currencies.
    </string>
    <string name="stats_help">
        Player Statistics are user-scoped and are only accessible to the user they belong to.
        Global Statistics are accessible to any user.
        \nDefine Player Statistics in the brainCloud portal under:\nUsers > Data > Statistics.
        \nDefine Global Statistics under:\nGlobal > Global Data > Global Statistics.
    </string>

    <!-- Status messages -->
    <string name="default_init">BC NOT INITIALIZED</string>
    <string name="bc_init_fail">Initialize failed…</string>
    <string name="default_auth">Welcome</string>
    <string name="attempt_auth">Authenticating…</string>
    <string name="auth_success">Authenticated!</string>
    <string name="auth_fail">Authentication failed…</string>
    <string name="invalid_login">Please fill in empty fields</string>
    <string name="retry_init">Check ids and try again.</string>
    <string name="explore_bc">Explore brainCloud</string>
    <string name="attempt_log_out">Logging out…</string>
    <string name="log_out_fail">Log out failed…</string>
    <string name="create_entity">Creating Entity…</string>
    <string name="entity_created">Entity Created!</string>
    <string name="entity_error">Entity Error…</string>
    <string name="entity_updated">Entity Updated!</string>
    <string name="entity_deleted">Entity Deleted!</string>
    <string name="find_entity">Finding Entity…</string>
    <string name="update_entity">Updating Entity…</string>
    <string name="delete_entity">Deleting Entity…</string>
    <string name="attaching">Attaching…</string>
    <string name="merging">Merging…</string>
    <string name="attach_success">Attach Successful!</string>
    <string name="attach_fail">Attach Failed…</string>
    <string name="merge_success">Merge Successful!</string>
    <string name="merge_fail">Merge Failed…</string>
    <string name="update_xp">Updating XP…</string>
    <string name="increment_xp">Incrementing XP…</string>
    <string name="current_xp">Current XP</string>
    <string name="update_currency">Updating Currency…</string>
    <string name="award_currency">Awarding Currency…</string>
    <string name="consume_currency">Consuming Currency…</string>
    <string name="current_currency">Current Currency</string>
    <string name="loading">Loading…</string>
    <string name="stats_update">Statistics Updated!</string>

    <!-- Buttons -->
    <string name="enter_brain_cloud">Enter brainCloud</string>
    <string name="attempt_reconnect">Reconnecting . . .</string>
    <string name="log_out">LOG OUT</string>
    <string name="explore_func">Explore</string>
    <string name="click_to_auth">AUTHENTICATE</string>
    <string name="back_button">Back</string>
    <string name="attach">Attach</string>
    <string name="merge">Merge</string>
    <string name="create_button">Create</string>
    <string name="default_entity_id">Entity ID:</string>
    <string name="default_entity_type">Entity Type:</string>
    <string name="create_entity_status">Create a New Entity</string>
    <string name="create">Create</string>
    <string name="update_entity_status">Update Entity</string>
    <string name="update">Update</string>
    <string name="default_entity_name">Entity Name:</string>
    <string name="default_entity_age">Entity Age:</string>
    <string name="delete">Delete</string>
    <string name="user_stats">User Stats</string>
    <string name="view_global">View Global Stats</string>
    <string name="global_stats">Global Stats</string>
    <string name="view_user">View User Stats</string>
    <string name="increment_xp_button">Increment XP</string>
    <string name="view_user_stats">View User Stats</string>
    <string name="award">Award</string>
    <string name="consume">Consume</string>

    <!-- Spinner arrays -->
    <string-array name="auth_types">
        <item>Select Auth Type</item>
        <item>Anonymous</item>
        <item>Universal</item>
        <item>Email</item>
    </string-array>
    <string-array name="bc_functions">
        <item>Select brainCloud Function</item>
        <item>Identity</item>
        <item>Entity</item>
        <item>Experience</item>
        <item>Currency</item>
        <item>Stats</item>
    </string-array>
    <string-array name="identity_types">
        <item>Email</item>
        <item>Universal</item>
    </string-array>
</resources>