<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bc_background"
    tools:context=".BrainCloudMenu">


    <TextView
        android:id="@+id/bc_init_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_init"
        android:textColor="@color/bc_text"/>

    <ImageView
        android:id="@+id/bc_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bc_logo"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/identity_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bc_logo_iv"
        android:layout_marginTop="-70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/identity_header"
        android:textSize="50dp"
        android:textColor="@color/bc_text"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/id_types_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/identity_title_tv"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@color/bc_button">

        <Spinner
            android:id="@+id/id_types_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/attach_fields_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_types_ll"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bc_button">

            <EditText
                android:id="@+id/user_field_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/user_hint"
                android:autofillHints="username"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@color/bc_button">

            <EditText
                android:id="@+id/pass_field_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:autofillHints="password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">

            <Button
                android:id="@+id/attach_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/bc_button"
                android:textColor="@color/black"
                android:text="@string/attach"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/merge_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/bc_button"
                android:textColor="@color/black"
                android:text="@string/merge"/>

        </LinearLayout>

        <TextView
            android:id="@+id/empty_field_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/invalid_login"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/identity_back_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/attach_fields_ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bc_button"
        android:text="@string/back_button"
        android:textColor="@color/black"/>

</RelativeLayout>